src/core/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL
    COLOR
    FLOAT
    ID
    INTEGER
    NORMAL
    POINT
    STRING
    TEX

Grammar

Rule 0     S' -> scene
Rule 1     scene -> directives worldblock
Rule 2     scene -> directives
Rule 3     scene -> worldblock
Rule 4     directives -> directives directive
Rule 5     directives -> directive
Rule 6     directive -> RENDERER SCONST
Rule 7     directive -> INTEGRATOR SCONST params
Rule 8     directive -> FILM SCONST params
Rule 9     directive -> SAMPLER SCONST params
Rule 10    directive -> FILTER SCONST params
Rule 11    directive -> CAMERA SCONST params
Rule 12    directive -> TRANSFORM matrix
Rule 13    directive -> INCLUDE SCONST
Rule 14    worldblock -> WORLDBEGIN objects WORLDEND
Rule 15    objects -> objects object
Rule 16    objects -> objects ATTRIBUTEBEGIN objects ATTRIBUTEEND
Rule 17    objects -> objects TRANSFORMBEGIN objects TRANSFORMEND
Rule 18    objects -> object
Rule 19    object -> SHAPE SCONST params
Rule 20    object -> MAKENAMEDMATERIAL SCONST params
Rule 21    object -> MATERIAL SCONST params
Rule 22    object -> NAMEDMATERIAL SCONST
Rule 23    object -> TEXTURE SCONST SCONST SCONST params
Rule 24    object -> LIGHTSOURCE SCONST params
Rule 25    object -> AREALIGHTSOURCE SCONST params
Rule 26    object -> TRANSFORM matrix
Rule 27    object -> empty
Rule 28    params -> params param
Rule 29    params -> param
Rule 30    param -> SCONST value
Rule 31    param -> empty
Rule 32    value -> LBRACKET ICONST RBRACKET
Rule 33    value -> LBRACKET FCONST RBRACKET
Rule 34    value -> LBRACKET SCONST RBRACKET
Rule 35    value -> LBRACKET QUOTE TRUE QUOTE RBRACKET
Rule 36    value -> LBRACKET QUOTE FALSE QUOTE RBRACKET
Rule 37    value -> matrix
Rule 38    value -> empty
Rule 39    matrix -> LBRACKET number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number RBRACKET
Rule 40    matrix -> LBRACKET number number number number number number number number number number number number number number number number number number number number number number number number RBRACKET
Rule 41    matrix -> LBRACKET number number number number number number number number number number number number number number number number RBRACKET
Rule 42    matrix -> LBRACKET number number number number number number number number number number number number RBRACKET
Rule 43    matrix -> LBRACKET number number number number number number number number RBRACKET
Rule 44    matrix -> LBRACKET number number number number number number RBRACKET
Rule 45    matrix -> LBRACKET number number number RBRACKET
Rule 46    number -> ICONST
Rule 47    number -> FCONST
Rule 48    empty -> <empty>

Terminals, with rules where they appear

AREALIGHTSOURCE      : 25
ATTRIBUTEBEGIN       : 16
ATTRIBUTEEND         : 16
BOOL                 : 
CAMERA               : 11
COLOR                : 
FALSE                : 36
FCONST               : 33 47
FILM                 : 8
FILTER               : 10
FLOAT                : 
ICONST               : 32 46
ID                   : 
INCLUDE              : 13
INTEGER              : 
INTEGRATOR           : 7
LBRACKET             : 32 33 34 35 36 39 40 41 42 43 44 45
LIGHTSOURCE          : 24
MAKENAMEDMATERIAL    : 20
MATERIAL             : 21
NAMEDMATERIAL        : 22
NORMAL               : 
POINT                : 
QUOTE                : 35 35 36 36
RBRACKET             : 32 33 34 35 36 39 40 41 42 43 44 45
RENDERER             : 6
SAMPLER              : 9
SCONST               : 6 7 8 9 10 11 13 19 20 21 22 23 23 23 24 25 30 34
SHAPE                : 19
STRING               : 
TEX                  : 
TEXTURE              : 23
TRANSFORM            : 12 26
TRANSFORMBEGIN       : 17
TRANSFORMEND         : 17
TRUE                 : 35
WORLDBEGIN           : 14
WORLDEND             : 14
error                : 

Nonterminals, with rules where they appear

directive            : 4 5
directives           : 1 2 4
empty                : 27 31 38
matrix               : 12 26 37
number               : 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 39 40 40 40 40 40 40 40 40 40 40 40 40 40 40 40 40 40 40 40 40 40 40 40 40 41 41 41 41 41 41 41 41 41 41 41 41 41 41 41 41 42 42 42 42 42 42 42 42 42 42 42 42 43 43 43 43 43 43 43 43 44 44 44 44 44 44 45 45 45
object               : 15 18
objects              : 14 15 16 16 17 17
param                : 28 29
params               : 7 8 9 10 11 19 20 21 23 24 25 28
scene                : 0
value                : 30
worldblock           : 1 3

Parsing method: LALR

state 0

    (0) S' -> . scene
    (1) scene -> . directives worldblock
    (2) scene -> . directives
    (3) scene -> . worldblock
    (4) directives -> . directives directive
    (5) directives -> . directive
    (14) worldblock -> . WORLDBEGIN objects WORLDEND
    (6) directive -> . RENDERER SCONST
    (7) directive -> . INTEGRATOR SCONST params
    (8) directive -> . FILM SCONST params
    (9) directive -> . SAMPLER SCONST params
    (10) directive -> . FILTER SCONST params
    (11) directive -> . CAMERA SCONST params
    (12) directive -> . TRANSFORM matrix
    (13) directive -> . INCLUDE SCONST

    WORLDBEGIN      shift and go to state 5
    RENDERER        shift and go to state 6
    INTEGRATOR      shift and go to state 7
    FILM            shift and go to state 8
    SAMPLER         shift and go to state 9
    FILTER          shift and go to state 10
    CAMERA          shift and go to state 11
    TRANSFORM       shift and go to state 12
    INCLUDE         shift and go to state 13

    scene                          shift and go to state 1
    directives                     shift and go to state 2
    worldblock                     shift and go to state 3
    directive                      shift and go to state 4

state 1

    (0) S' -> scene .



state 2

    (1) scene -> directives . worldblock
    (2) scene -> directives .
    (4) directives -> directives . directive
    (14) worldblock -> . WORLDBEGIN objects WORLDEND
    (6) directive -> . RENDERER SCONST
    (7) directive -> . INTEGRATOR SCONST params
    (8) directive -> . FILM SCONST params
    (9) directive -> . SAMPLER SCONST params
    (10) directive -> . FILTER SCONST params
    (11) directive -> . CAMERA SCONST params
    (12) directive -> . TRANSFORM matrix
    (13) directive -> . INCLUDE SCONST

    $end            reduce using rule 2 (scene -> directives .)
    WORLDBEGIN      shift and go to state 5
    RENDERER        shift and go to state 6
    INTEGRATOR      shift and go to state 7
    FILM            shift and go to state 8
    SAMPLER         shift and go to state 9
    FILTER          shift and go to state 10
    CAMERA          shift and go to state 11
    TRANSFORM       shift and go to state 12
    INCLUDE         shift and go to state 13

    worldblock                     shift and go to state 14
    directive                      shift and go to state 15

state 3

    (3) scene -> worldblock .

    $end            reduce using rule 3 (scene -> worldblock .)


state 4

    (5) directives -> directive .

    WORLDBEGIN      reduce using rule 5 (directives -> directive .)
    RENDERER        reduce using rule 5 (directives -> directive .)
    INTEGRATOR      reduce using rule 5 (directives -> directive .)
    FILM            reduce using rule 5 (directives -> directive .)
    SAMPLER         reduce using rule 5 (directives -> directive .)
    FILTER          reduce using rule 5 (directives -> directive .)
    CAMERA          reduce using rule 5 (directives -> directive .)
    TRANSFORM       reduce using rule 5 (directives -> directive .)
    INCLUDE         reduce using rule 5 (directives -> directive .)
    $end            reduce using rule 5 (directives -> directive .)


state 5

    (14) worldblock -> WORLDBEGIN . objects WORLDEND
    (15) objects -> . objects object
    (16) objects -> . objects ATTRIBUTEBEGIN objects ATTRIBUTEEND
    (17) objects -> . objects TRANSFORMBEGIN objects TRANSFORMEND
    (18) objects -> . object
    (19) object -> . SHAPE SCONST params
    (20) object -> . MAKENAMEDMATERIAL SCONST params
    (21) object -> . MATERIAL SCONST params
    (22) object -> . NAMEDMATERIAL SCONST
    (23) object -> . TEXTURE SCONST SCONST SCONST params
    (24) object -> . LIGHTSOURCE SCONST params
    (25) object -> . AREALIGHTSOURCE SCONST params
    (26) object -> . TRANSFORM matrix
    (27) object -> . empty
    (48) empty -> .

  ! shift/reduce conflict for SHAPE resolved as shift
  ! shift/reduce conflict for MAKENAMEDMATERIAL resolved as shift
  ! shift/reduce conflict for MATERIAL resolved as shift
  ! shift/reduce conflict for NAMEDMATERIAL resolved as shift
  ! shift/reduce conflict for TEXTURE resolved as shift
  ! shift/reduce conflict for LIGHTSOURCE resolved as shift
  ! shift/reduce conflict for AREALIGHTSOURCE resolved as shift
  ! shift/reduce conflict for TRANSFORM resolved as shift
    SHAPE           shift and go to state 18
    MAKENAMEDMATERIAL shift and go to state 19
    MATERIAL        shift and go to state 20
    NAMEDMATERIAL   shift and go to state 21
    TEXTURE         shift and go to state 22
    LIGHTSOURCE     shift and go to state 23
    AREALIGHTSOURCE shift and go to state 24
    TRANSFORM       shift and go to state 25
    WORLDEND        reduce using rule 48 (empty -> .)
    ATTRIBUTEBEGIN  reduce using rule 48 (empty -> .)
    TRANSFORMBEGIN  reduce using rule 48 (empty -> .)

  ! SHAPE           [ reduce using rule 48 (empty -> .) ]
  ! MAKENAMEDMATERIAL [ reduce using rule 48 (empty -> .) ]
  ! MATERIAL        [ reduce using rule 48 (empty -> .) ]
  ! NAMEDMATERIAL   [ reduce using rule 48 (empty -> .) ]
  ! TEXTURE         [ reduce using rule 48 (empty -> .) ]
  ! LIGHTSOURCE     [ reduce using rule 48 (empty -> .) ]
  ! AREALIGHTSOURCE [ reduce using rule 48 (empty -> .) ]
  ! TRANSFORM       [ reduce using rule 48 (empty -> .) ]

    objects                        shift and go to state 16
    object                         shift and go to state 17
    empty                          shift and go to state 26

state 6

    (6) directive -> RENDERER . SCONST

    SCONST          shift and go to state 27


state 7

    (7) directive -> INTEGRATOR . SCONST params

    SCONST          shift and go to state 28


state 8

    (8) directive -> FILM . SCONST params

    SCONST          shift and go to state 29


state 9

    (9) directive -> SAMPLER . SCONST params

    SCONST          shift and go to state 30


state 10

    (10) directive -> FILTER . SCONST params

    SCONST          shift and go to state 31


state 11

    (11) directive -> CAMERA . SCONST params

    SCONST          shift and go to state 32


state 12

    (12) directive -> TRANSFORM . matrix
    (39) matrix -> . LBRACKET number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number RBRACKET
    (40) matrix -> . LBRACKET number number number number number number number number number number number number number number number number number number number number number number number number RBRACKET
    (41) matrix -> . LBRACKET number number number number number number number number number number number number number number number number RBRACKET
    (42) matrix -> . LBRACKET number number number number number number number number number number number number RBRACKET
    (43) matrix -> . LBRACKET number number number number number number number number RBRACKET
    (44) matrix -> . LBRACKET number number number number number number RBRACKET
    (45) matrix -> . LBRACKET number number number RBRACKET

    LBRACKET        shift and go to state 34

    matrix                         shift and go to state 33

state 13

    (13) directive -> INCLUDE . SCONST

    SCONST          shift and go to state 35


state 14

    (1) scene -> directives worldblock .

    $end            reduce using rule 1 (scene -> directives worldblock .)


state 15

    (4) directives -> directives directive .

    WORLDBEGIN      reduce using rule 4 (directives -> directives directive .)
    RENDERER        reduce using rule 4 (directives -> directives directive .)
    INTEGRATOR      reduce using rule 4 (directives -> directives directive .)
    FILM            reduce using rule 4 (directives -> directives directive .)
    SAMPLER         reduce using rule 4 (directives -> directives directive .)
    FILTER          reduce using rule 4 (directives -> directives directive .)
    CAMERA          reduce using rule 4 (directives -> directives directive .)
    TRANSFORM       reduce using rule 4 (directives -> directives directive .)
    INCLUDE         reduce using rule 4 (directives -> directives directive .)
    $end            reduce using rule 4 (directives -> directives directive .)


state 16

    (14) worldblock -> WORLDBEGIN objects . WORLDEND
    (15) objects -> objects . object
    (16) objects -> objects . ATTRIBUTEBEGIN objects ATTRIBUTEEND
    (17) objects -> objects . TRANSFORMBEGIN objects TRANSFORMEND
    (19) object -> . SHAPE SCONST params
    (20) object -> . MAKENAMEDMATERIAL SCONST params
    (21) object -> . MATERIAL SCONST params
    (22) object -> . NAMEDMATERIAL SCONST
    (23) object -> . TEXTURE SCONST SCONST SCONST params
    (24) object -> . LIGHTSOURCE SCONST params
    (25) object -> . AREALIGHTSOURCE SCONST params
    (26) object -> . TRANSFORM matrix
    (27) object -> . empty
    (48) empty -> .

  ! shift/reduce conflict for WORLDEND resolved as shift
  ! shift/reduce conflict for ATTRIBUTEBEGIN resolved as shift
  ! shift/reduce conflict for TRANSFORMBEGIN resolved as shift
  ! shift/reduce conflict for SHAPE resolved as shift
  ! shift/reduce conflict for MAKENAMEDMATERIAL resolved as shift
  ! shift/reduce conflict for MATERIAL resolved as shift
  ! shift/reduce conflict for NAMEDMATERIAL resolved as shift
  ! shift/reduce conflict for TEXTURE resolved as shift
  ! shift/reduce conflict for LIGHTSOURCE resolved as shift
  ! shift/reduce conflict for AREALIGHTSOURCE resolved as shift
  ! shift/reduce conflict for TRANSFORM resolved as shift
    WORLDEND        shift and go to state 36
    ATTRIBUTEBEGIN  shift and go to state 38
    TRANSFORMBEGIN  shift and go to state 39
    SHAPE           shift and go to state 18
    MAKENAMEDMATERIAL shift and go to state 19
    MATERIAL        shift and go to state 20
    NAMEDMATERIAL   shift and go to state 21
    TEXTURE         shift and go to state 22
    LIGHTSOURCE     shift and go to state 23
    AREALIGHTSOURCE shift and go to state 24
    TRANSFORM       shift and go to state 25

  ! WORLDEND        [ reduce using rule 48 (empty -> .) ]
  ! ATTRIBUTEBEGIN  [ reduce using rule 48 (empty -> .) ]
  ! TRANSFORMBEGIN  [ reduce using rule 48 (empty -> .) ]
  ! SHAPE           [ reduce using rule 48 (empty -> .) ]
  ! MAKENAMEDMATERIAL [ reduce using rule 48 (empty -> .) ]
  ! MATERIAL        [ reduce using rule 48 (empty -> .) ]
  ! NAMEDMATERIAL   [ reduce using rule 48 (empty -> .) ]
  ! TEXTURE         [ reduce using rule 48 (empty -> .) ]
  ! LIGHTSOURCE     [ reduce using rule 48 (empty -> .) ]
  ! AREALIGHTSOURCE [ reduce using rule 48 (empty -> .) ]
  ! TRANSFORM       [ reduce using rule 48 (empty -> .) ]

    object                         shift and go to state 37
    empty                          shift and go to state 26

state 17

    (18) objects -> object .

    WORLDEND        reduce using rule 18 (objects -> object .)
    ATTRIBUTEBEGIN  reduce using rule 18 (objects -> object .)
    TRANSFORMBEGIN  reduce using rule 18 (objects -> object .)
    SHAPE           reduce using rule 18 (objects -> object .)
    MAKENAMEDMATERIAL reduce using rule 18 (objects -> object .)
    MATERIAL        reduce using rule 18 (objects -> object .)
    NAMEDMATERIAL   reduce using rule 18 (objects -> object .)
    TEXTURE         reduce using rule 18 (objects -> object .)
    LIGHTSOURCE     reduce using rule 18 (objects -> object .)
    AREALIGHTSOURCE reduce using rule 18 (objects -> object .)
    TRANSFORM       reduce using rule 18 (objects -> object .)
    ATTRIBUTEEND    reduce using rule 18 (objects -> object .)
    TRANSFORMEND    reduce using rule 18 (objects -> object .)


state 18

    (19) object -> SHAPE . SCONST params

    SCONST          shift and go to state 40


state 19

    (20) object -> MAKENAMEDMATERIAL . SCONST params

    SCONST          shift and go to state 41


state 20

    (21) object -> MATERIAL . SCONST params

    SCONST          shift and go to state 42


state 21

    (22) object -> NAMEDMATERIAL . SCONST

    SCONST          shift and go to state 43


state 22

    (23) object -> TEXTURE . SCONST SCONST SCONST params

    SCONST          shift and go to state 44


state 23

    (24) object -> LIGHTSOURCE . SCONST params

    SCONST          shift and go to state 45


state 24

    (25) object -> AREALIGHTSOURCE . SCONST params

    SCONST          shift and go to state 46


state 25

    (26) object -> TRANSFORM . matrix
    (39) matrix -> . LBRACKET number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number RBRACKET
    (40) matrix -> . LBRACKET number number number number number number number number number number number number number number number number number number number number number number number number RBRACKET
    (41) matrix -> . LBRACKET number number number number number number number number number number number number number number number number RBRACKET
    (42) matrix -> . LBRACKET number number number number number number number number number number number number RBRACKET
    (43) matrix -> . LBRACKET number number number number number number number number RBRACKET
    (44) matrix -> . LBRACKET number number number number number number RBRACKET
    (45) matrix -> . LBRACKET number number number RBRACKET

    LBRACKET        shift and go to state 34

    matrix                         shift and go to state 47

state 26

    (27) object -> empty .

    WORLDEND        reduce using rule 27 (object -> empty .)
    ATTRIBUTEBEGIN  reduce using rule 27 (object -> empty .)
    TRANSFORMBEGIN  reduce using rule 27 (object -> empty .)
    SHAPE           reduce using rule 27 (object -> empty .)
    MAKENAMEDMATERIAL reduce using rule 27 (object -> empty .)
    MATERIAL        reduce using rule 27 (object -> empty .)
    NAMEDMATERIAL   reduce using rule 27 (object -> empty .)
    TEXTURE         reduce using rule 27 (object -> empty .)
    LIGHTSOURCE     reduce using rule 27 (object -> empty .)
    AREALIGHTSOURCE reduce using rule 27 (object -> empty .)
    TRANSFORM       reduce using rule 27 (object -> empty .)
    ATTRIBUTEEND    reduce using rule 27 (object -> empty .)
    TRANSFORMEND    reduce using rule 27 (object -> empty .)


state 27

    (6) directive -> RENDERER SCONST .

    WORLDBEGIN      reduce using rule 6 (directive -> RENDERER SCONST .)
    RENDERER        reduce using rule 6 (directive -> RENDERER SCONST .)
    INTEGRATOR      reduce using rule 6 (directive -> RENDERER SCONST .)
    FILM            reduce using rule 6 (directive -> RENDERER SCONST .)
    SAMPLER         reduce using rule 6 (directive -> RENDERER SCONST .)
    FILTER          reduce using rule 6 (directive -> RENDERER SCONST .)
    CAMERA          reduce using rule 6 (directive -> RENDERER SCONST .)
    TRANSFORM       reduce using rule 6 (directive -> RENDERER SCONST .)
    INCLUDE         reduce using rule 6 (directive -> RENDERER SCONST .)
    $end            reduce using rule 6 (directive -> RENDERER SCONST .)


state 28

    (7) directive -> INTEGRATOR SCONST . params
    (28) params -> . params param
    (29) params -> . param
    (30) param -> . SCONST value
    (31) param -> . empty
    (48) empty -> .

  ! shift/reduce conflict for SCONST resolved as shift
    SCONST          shift and go to state 48
    WORLDBEGIN      reduce using rule 48 (empty -> .)
    RENDERER        reduce using rule 48 (empty -> .)
    INTEGRATOR      reduce using rule 48 (empty -> .)
    FILM            reduce using rule 48 (empty -> .)
    SAMPLER         reduce using rule 48 (empty -> .)
    FILTER          reduce using rule 48 (empty -> .)
    CAMERA          reduce using rule 48 (empty -> .)
    TRANSFORM       reduce using rule 48 (empty -> .)
    INCLUDE         reduce using rule 48 (empty -> .)
    $end            reduce using rule 48 (empty -> .)

  ! SCONST          [ reduce using rule 48 (empty -> .) ]

    params                         shift and go to state 49
    param                          shift and go to state 50
    empty                          shift and go to state 51

state 29

    (8) directive -> FILM SCONST . params
    (28) params -> . params param
    (29) params -> . param
    (30) param -> . SCONST value
    (31) param -> . empty
    (48) empty -> .

  ! shift/reduce conflict for SCONST resolved as shift
    SCONST          shift and go to state 48
    WORLDBEGIN      reduce using rule 48 (empty -> .)
    RENDERER        reduce using rule 48 (empty -> .)
    INTEGRATOR      reduce using rule 48 (empty -> .)
    FILM            reduce using rule 48 (empty -> .)
    SAMPLER         reduce using rule 48 (empty -> .)
    FILTER          reduce using rule 48 (empty -> .)
    CAMERA          reduce using rule 48 (empty -> .)
    TRANSFORM       reduce using rule 48 (empty -> .)
    INCLUDE         reduce using rule 48 (empty -> .)
    $end            reduce using rule 48 (empty -> .)

  ! SCONST          [ reduce using rule 48 (empty -> .) ]

    params                         shift and go to state 52
    param                          shift and go to state 50
    empty                          shift and go to state 51

state 30

    (9) directive -> SAMPLER SCONST . params
    (28) params -> . params param
    (29) params -> . param
    (30) param -> . SCONST value
    (31) param -> . empty
    (48) empty -> .

  ! shift/reduce conflict for SCONST resolved as shift
    SCONST          shift and go to state 48
    WORLDBEGIN      reduce using rule 48 (empty -> .)
    RENDERER        reduce using rule 48 (empty -> .)
    INTEGRATOR      reduce using rule 48 (empty -> .)
    FILM            reduce using rule 48 (empty -> .)
    SAMPLER         reduce using rule 48 (empty -> .)
    FILTER          reduce using rule 48 (empty -> .)
    CAMERA          reduce using rule 48 (empty -> .)
    TRANSFORM       reduce using rule 48 (empty -> .)
    INCLUDE         reduce using rule 48 (empty -> .)
    $end            reduce using rule 48 (empty -> .)

  ! SCONST          [ reduce using rule 48 (empty -> .) ]

    params                         shift and go to state 53
    param                          shift and go to state 50
    empty                          shift and go to state 51

state 31

    (10) directive -> FILTER SCONST . params
    (28) params -> . params param
    (29) params -> . param
    (30) param -> . SCONST value
    (31) param -> . empty
    (48) empty -> .

  ! shift/reduce conflict for SCONST resolved as shift
    SCONST          shift and go to state 48
    WORLDBEGIN      reduce using rule 48 (empty -> .)
    RENDERER        reduce using rule 48 (empty -> .)
    INTEGRATOR      reduce using rule 48 (empty -> .)
    FILM            reduce using rule 48 (empty -> .)
    SAMPLER         reduce using rule 48 (empty -> .)
    FILTER          reduce using rule 48 (empty -> .)
    CAMERA          reduce using rule 48 (empty -> .)
    TRANSFORM       reduce using rule 48 (empty -> .)
    INCLUDE         reduce using rule 48 (empty -> .)
    $end            reduce using rule 48 (empty -> .)

  ! SCONST          [ reduce using rule 48 (empty -> .) ]

    params                         shift and go to state 54
    param                          shift and go to state 50
    empty                          shift and go to state 51

state 32

    (11) directive -> CAMERA SCONST . params
    (28) params -> . params param
    (29) params -> . param
    (30) param -> . SCONST value
    (31) param -> . empty
    (48) empty -> .

  ! shift/reduce conflict for SCONST resolved as shift
    SCONST          shift and go to state 48
    WORLDBEGIN      reduce using rule 48 (empty -> .)
    RENDERER        reduce using rule 48 (empty -> .)
    INTEGRATOR      reduce using rule 48 (empty -> .)
    FILM            reduce using rule 48 (empty -> .)
    SAMPLER         reduce using rule 48 (empty -> .)
    FILTER          reduce using rule 48 (empty -> .)
    CAMERA          reduce using rule 48 (empty -> .)
    TRANSFORM       reduce using rule 48 (empty -> .)
    INCLUDE         reduce using rule 48 (empty -> .)
    $end            reduce using rule 48 (empty -> .)

  ! SCONST          [ reduce using rule 48 (empty -> .) ]

    params                         shift and go to state 55
    param                          shift and go to state 50
    empty                          shift and go to state 51

state 33

    (12) directive -> TRANSFORM matrix .

    WORLDBEGIN      reduce using rule 12 (directive -> TRANSFORM matrix .)
    RENDERER        reduce using rule 12 (directive -> TRANSFORM matrix .)
    INTEGRATOR      reduce using rule 12 (directive -> TRANSFORM matrix .)
    FILM            reduce using rule 12 (directive -> TRANSFORM matrix .)
    SAMPLER         reduce using rule 12 (directive -> TRANSFORM matrix .)
    FILTER          reduce using rule 12 (directive -> TRANSFORM matrix .)
    CAMERA          reduce using rule 12 (directive -> TRANSFORM matrix .)
    TRANSFORM       reduce using rule 12 (directive -> TRANSFORM matrix .)
    INCLUDE         reduce using rule 12 (directive -> TRANSFORM matrix .)
    $end            reduce using rule 12 (directive -> TRANSFORM matrix .)


state 34

    (39) matrix -> LBRACKET . number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number number RBRACKET
    (40) matrix -> LBRACKET . number number number number number number number number number number number number number number number number number number number number number number number number RBRACKET
    (41) matrix -> LBRACKET . number number number number number number number number number number number number number number number number RBRACKET
    (42) matrix -> LBRACKET . number number number number number number number number number number number number RBRACKET
    (43) matrix -> LBRACKET . number number number number number number number number RBRACKET
    (44) matrix -> LBRACKET . number number number number number number RBRACKET
    (45) matrix -> LBRACKET . number number number RBRACKET
    (46) number -> . ICONST
    (47) number -> . FCONST

    ICONST          shift and go to state 57
    FCONST          shift and go to state 58

    number                         shift and go to state 56

state 35

    (13) directive -> INCLUDE SCONST .

    WORLDBEGIN      reduce using rule 13 (directive -> INCLUDE SCONST .)
    RENDERER        reduce using rule 13 (directive -> INCLUDE SCONST .)
    INTEGRATOR      reduce using rule 13 (directive -> INCLUDE SCONST .)
    FILM            reduce using rule 13 (directive -> INCLUDE SCONST .)
    SAMPLER         reduce using rule 13 (directive -> INCLUDE SCONST .)
    FILTER          reduce using rule 13 (directive -> INCLUDE SCONST .)
    CAMERA          reduce using rule 13 (directive -> INCLUDE SCONST .)
    TRANSFORM       reduce using rule 13 (directive -> INCLUDE SCONST .)
    INCLUDE         reduce using rule 13 (directive -> INCLUDE SCONST .)
    $end            reduce using rule 13 (directive -> INCLUDE SCONST .)


state 36
